Add GUI first three pages
GUI V1